--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -8,7 +8,5 @@ parserOptions:
   sourceType: module
 rules: {
   no-console: off,
-  import/extensions: off,
-  import/prefer-default-export: off,
-  no-eval: off
+  import/extensions: off
 }
